# vrpSolver

./: .gitignore  ApproximationAlgorithms.ipynb  LR.xlsx  LagrangianRelaxation.ipynb  OP.lp  README.md  TSPFormulations.xlsx  TSP_IP.ipynb  Test.html  Two-Index.lp  data.py  pyproject.toml  setup.py  test.pkl  test.py  vrpSolver.ipynb
data/: Buffalo_50_R7500.pkl  Tau_Buffalo_50_R7500_ORS.pkl  Xiamen.pkl  map.pkl
demo/: C101.txt  Close-enough TSP.ipynb  Generate_Instances.ipynb  Instances.ipynb  OP.lp  Orienteering Problem.ipynb  RoadNetwork_geoJSON.ipynb  TSP_Held and Karp Lower Bound.ipynb  TSP_IP-Copy1.ipynb  TSP_IP.ipynb  TSP_metaheuristic.ipynb  Untitled.ipynb  Untitled2.ipynb  VRPTW.ipynb  close-enough TSP.ipynb  geoJSON.ipynb  plotGantt().ipynb
docs/: .buildinfo  conf.py  genindex.html  geoVeRoPy.instance.html  geoVeRoPy.obj2Obj.html  geoVeRoPy.obj2Obj.rst  geoVeRoPy.plot.html  geoVeRoPy.rst  geoVeRoPy.tsp.rst  geo_objs.html  geo_objs.rst  index.html  objects.inv  py-modindex.html  search.html  vrpSolver.geometry.html  vrpSolver.obj2Obj.html  vrpSolver.travel.html
geoVeRoPy/: __init__.py  animation.py  cetsp.py  color.py  common.py  ds.py  geometry.py  instance.py  mtsp.py  obj2Obj.py  op.py  plot.py  pms.py  polyTour.py  province.py  road.py  top.py  travel.py  tsp.py  tsptw.py  vector.py  vrptw.py
test/: OP.lp  tsptw.lp
vrpSolver/: CVRPTW.py  GA.py  PMS.py  TSP.py  __init__.py  analysisTSP.py  animation.py  bak.bak  bb.py  bkHeuTSP.py  calculate.py  cetsp.py  cgCVRPTW.py  cluster.py  color.py  common.py  consTSP.py  consVRP.py  const.py  ds.py  error.py  (+53 more)
(+125 files in other folders)
