[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vrpSolver"
version = "0.0.60"
authors = [
  { name="Lan Peng", email="lanpeng@shu.edu.cn" },
]
description = "Working project: Learn VRP by coding"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "geopy",
  "geojson",
  "matplotlib",
  "shapely",
  "networkx"
]
license = {text = "MIT License"}
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/isaac0821/vrpSolver/"
Issues = "https://github.com/isaac0821/vrpSolver/issues"
Documentation = "https://isaac0821.github.io/vrpSolver/"